--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -24,15 +24,43 @@
         justify-content: center;
         align-items: center;
         
-        .Footer-icon {
-            color: $white;
-            font-size: 1.25rem;
-            padding-left: 2rem;
-            padding-right: 2rem;
-            @include transition(color .4s ease);
+        a {
+            position: relative;
+            cursor: pointer;
+            
+            &:before {
+                width: 8rem;
+                position: absolute;
+                display: inline-block;
+                text-align: center;
+                padding: 0.25rem;
+                opacity: 0;
+                font-size: 0.75rem;
+                color: $black;
+                background-color: $beige;
+                border-radius: 5%;
+                top: 0px;
+                @include transition(all 0.3s ease);
+                content: attr(data-tip);
+                transform: translate(-1.25rem, -120%);
+            }
             
             &:hover {
-                color: $grey;
+                &:before {
+                    opacity: 1;
+                }
+            }
+            
+            .Footer-icon {
+                color: $white;
+                font-size: 1.25rem;
+                padding-left: 2rem;
+                padding-right: 2rem;
+                @include transition(color .4s ease);
+
+                &:hover {
+                    color: $grey;
+                }
             }
         }
     }
