--- a/src/components/resume/Resume.scss
+++ b/src/components/resume/Resume.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 @import "../../_mixins.scss";
 
-.container {
+.Resume-container {
     @include container;
     
     .Resume-left, .Resume-right {
