added responsivness for tablets and smartphones

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,6 @@
     background-color: $white;
     font-family: $roboto-mono;
     font-weight: normal;
+    min-height: 100vh;
+    position: relative;
 }
