--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -7,19 +7,31 @@
 }
 
 @mixin container {
-    height: 80vh;
     width: 100%;
     display: flex;
     flex-direction: row;
+    position: relative;
 }
 
 @mixin half-sections {
-    padding-left: 5rem;
-    padding-right: 5rem;
+    padding-left: 5%;
+    padding-right: 5%;
     width: 50%;
-    height: 100%;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+@mixin tablet {
+    @media (max-width: 768px) {
+        @content
+    }
+}
+
+@mixin phone {
+    @media (max-width: 540px) {
+        @content
+    }
 }
