--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -4,12 +4,28 @@
 .About-container {
     @include container;
     
+    @include tablet {
+        flex-direction: column;
+        padding-bottom: 10vh;
+    }
+    
     .About-left, .About-right {
         @include half-sections;
         
+        @include tablet {
+            width: 100%;
+            padding-top: 5%;
+            padding-bottom: 5%;
+            padding-left: 0;
+            padding-right: 0;
+        }
         
         h1 {
             font-size: 3rem;
+            
+            @include tablet {
+                margin-left: 5%;
+            }
             
             &::selection {
                 background: $white;
@@ -19,6 +35,10 @@
         h2 {
             font-size: 1.5rem;
             font-weight: lighter;
+            
+            @include tablet {
+                margin-left: 5%;
+            }
             
             &::selection {
                 background: $white;
@@ -48,7 +68,7 @@
         img {
             border-radius: 50%;
             object-fit: cover;
-            width: 10rem;
+            width: 10rem;;
             height: 10rem;
             padding: 0.25rem;
             border: solid 1px $pink;
@@ -57,6 +77,12 @@
         }
         
         h3 {
+            @include tablet {
+                margin-left: 5%;
+                margin-right: 5%;
+                text-align: center;
+            }
+            
             &::selection {
                 background: $pink;
             }
