--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -3,6 +3,7 @@
 
 .Footer {
     background-color: $black;
+    position: absolute;
     height: 10vh;
     bottom: 0;
     width: 100%;
@@ -13,9 +14,12 @@
     
     p {
         color: $white;
-        display: flex;
-        justify-content: center;
+        text-align: center;
         width: 33%;
+        
+        @include phone {
+            display: none;
+        }
     }
     
     div {
@@ -23,6 +27,11 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        
+        @include phone {
+            width: 100%;
+            justify-content: space-between;
+        }
         
         a {
             position: relative;
@@ -43,11 +52,27 @@
                 @include transition(all 0.3s ease);
                 content: attr(data-tip);
                 transform: translate(-1.25rem, -120%);
+                
+                @include phone {
+                    display: none;
+                }
             }
             
             &:hover {
                 &:before {
                     opacity: 1;
+                }
+            }
+            
+            @include phone {
+                padding: 0;
+                
+                &:first-child {
+                    margin-left: 10%;
+                }
+                
+                &:last-child {
+                    margin-right: 10%;
                 }
             }
             
@@ -57,6 +82,15 @@
                 padding-left: 2rem;
                 padding-right: 2rem;
                 @include transition(color .4s ease);
+                
+                @include tablet {
+                    padding-left: 1rem;
+                    padding-right: 1rem;
+                }
+                
+                @include phone {
+                    padding: 0;
+                }
 
                 &:hover {
                     color: $grey;
