--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -5,13 +5,15 @@
     @include container;
     
     .Portfolio-showcase {
-        padding-left: 5%;
-        padding-right: 5%;
+        margin-left: 10%;
+        margin-right: 10%;
+        padding-bottom: 10vh;
         width: 100%;
+        min-height: 80vh;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-around;
-        align-items: flex-start;
+        align-items: center;
         flex-direction: row;
     }
 }
