--- a/src/components/project/Project.scss
+++ b/src/components/project/Project.scss
@@ -1,4 +1,5 @@
 @import "../../variables.scss";
+@import "../../_mixins.scss";
 
 .Project-container {
     display: flex;
@@ -7,13 +8,24 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 0.75rem;
-    max-width: 25%;
+    max-width: 28%;
     height: 40%;
     background-color: rgb(250,250,250);
     margin: 1%;
     -webkit-box-shadow: 0px 0px 2px 0px rgba(164,164,164,1);
     -moz-box-shadow: 0px 0px 2px 0px rgba(164,164,164,1);
     box-shadow: 0px 0px 2px 0px rgba(164,164,164,1);
+    
+    @include tablet {
+        flex: 1 50%;
+        max-width: 40%;
+    }
+    
+    @include phone {
+        flex: 100%;
+        max-width: 80%;
+        max-height: 20%;
+    }
     
     .Project-link {
         width: 100%;
@@ -22,6 +34,7 @@
         color: $black;
         
         img {
+            object-fit: cover;
             width: 100%;
             height: 70%;
         }
