Added navigation bar for mobile phones and fixed e-mail button

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -58,6 +58,13 @@
                 }
             }
             
+            // exception for the e-mail tooltip
+            &:first-child:before {
+                @include phone {
+                    display: block;
+                }
+            }
+            
             &:hover {
                 &:before {
                     opacity: 1;
