--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,8 +4,33 @@
 .Header {
     background-color: $black;
     height: 10vh;
+    width: 100%;
     display: flex;
     justify-content: center;
+    
+    @include phone {
+        justify-content: flex-end;
+    }
+    
+    .Header-iconholder {
+        opacity: 0;
+        z-index: -1;
+        height: 100%;
+        display: flex;
+        width: 0;
+        align-items: center;
+        justify-content: flex-end;
+        @include transition (all 0.3s ease);
+        
+        @include phone {
+            color: $white;
+            font-size: 1.5rem;
+            margin-right: 10%;
+            cursor: pointer;
+            opacity: 1;
+            z-index: 3;
+        }
+    }
     
     ul {
         list-style: none;
@@ -13,10 +38,26 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        @include transition(all 0.3s ease);
+        
+        @include phone {
+            width: 100%;
+            height: 100%;
+            position: fixed;
+            z-index: 2;
+            background-color: $black;
+            flex-direction: column;
+            margin: 0;
+        }
         
         li {
             margin-left: 10%;
             margin-right: 10%;
+            
+            @include phone {
+                padding: 5% 0 5% 0;
+                margin: 0;
+            }
             
             .Header-link {
                 text-decoration: none;
@@ -31,6 +72,16 @@
             .Header-active {
                 color: $grey;
             }
+        }
+    }
+    
+    .hidden {
+        opacity: 1;
+        z-index: 2;
+        
+        @include phone {
+            opacity: 0;
+            z-index: -1;
         }
     }
 }
