--- a/src/components/project-page/ProjectPage.scss
+++ b/src/components/project-page/ProjectPage.scss
@@ -17,11 +17,11 @@
         .ProjectPage-toolholder {
             display: flex;
             flex-direction: row;
+            flex-wrap: wrap;
             
             .ProjectPage-tool {
                 background-color: $pink;
-                margin-right: 1rem;
-                margin-left: 1rem;
+                margin: 2%;
                 padding: 0.5rem;
             }
         }
