changes in resume and portfolio data (descriptions)

--- a/src/components/resume/Resume.scss
+++ b/src/components/resume/Resume.scss
@@ -85,6 +85,10 @@
             display: flex;
             flex-direction: column;
             font-size: 0.75rem;
+            
+            .skill-box, .language-box, .interest-box {
+                margin-top: 0.5rem;
+            }
         }
         
         .hidden {
